--- a/Flask/Hjemmeside/templates/login.html
+++ b/Flask/Hjemmeside/templates/login.html
@@ -3,53 +3,34 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<form method="POST" action="{{ url_for('auth.login') }}">
-  <h3 class="text-center">Login</h3>
+<div class="content-wrapper p-4 rounded">
+  <form method="POST" action="{{ url_for('auth.login') }}">
+    <h3 class="text-center">Login</h3>
 
-  {% with messages = get_flashed_messages() %}
+    {% with messages = get_flashed_messages() %}
     {% if messages %}
-      <div class="alert alert-danger">
-        {{ messages[0] }}
-      </div>
+    <div class="alert alert-danger">
+      {{ messages[0] }}
+    </div>
     {% endif %}
-  {% endwith %}
+    {% endwith %}
 
-  <div class="mb-3">
-    <label for="email" class="form-label">Email Address</label>
-    <input
-      type="email"
-      class="form-control"
-      id="email"
-      name="email"
-      placeholder="Enter email"
-      required
-    >
-  </div>
+    <div class="mb-3">
+      <label for="email" class="form-label">Email Address</label>
+      <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" required>
+    </div>
 
-  <div class="mb-3">
-    <label for="firstname" class="form-label">First Name</label>
-    <input
-      type="text"
-      class="form-control"
-      id="firstname"
-      name="firstname"
-      placeholder="Enter first name"
-      required
-    >
-  </div>
+    <div class="mb-3">
+      <label for="firstname" class="form-label">First Name</label>
+      <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter first name" required>
+    </div>
 
-  <div class="mb-3">
-    <label for="password1" class="form-label">Password</label>
-    <input
-      type="password"
-      class="form-control"
-      id="password"
-      name="password"
-      placeholder="Enter password"
-      required
-    >
-  </div>
+    <div class="mb-3">
+      <label for="password1" class="form-label">Password</label>
+      <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
+    </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
 {% endblock %}
