--- a/Flask/Hjemmeside/templates/about_us.html
+++ b/Flask/Hjemmeside/templates/about_us.html
@@ -1,4 +1,53 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 
-{% block content %}<h1>About Us</h1>{% endblock %}
+{% block content %}
+<h1 id="The Team" class="p-5 mt-3 text-center">The Team</h1>
+<div class="row ms-5 me-5 mb-5">
+    <div class="col">
+        <div class="card">
+            <img src="/static/viktor.png" class="card-img-top" alt="viktor">
+            <div class="card-body border border-primary-subtle">
+                <h3 class="card-title text-primary-emphasis">Viktor</h3>
+                <p class="card-text">Tidligere russisk hacker turned IT-teknolog, Viktor er en ekspert i chatgpt prompts
+                    og en seasoned dahl enjoyer. Emil Petersen har også quoted ham til klassens bedste backend.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <img src="/static/philip.png" class="card-img-top" alt="philip">
+            <div class="card-body border border-primary-subtle">
+                <h3 class="card-title text-primary-emphasis">Philip</h3>
+                <p class="card-text">Philip udfylder teamets mere filisofiske behov. Tvinger teamet til at tænke kritisk
+                    i dilemmaer som "Du vil få 1 million kroner, hvis du kan klare 24 timer med Dwayne the Rock Johnson"
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <img src="/static/lukas.png" class="card-img-top" alt="lukas">
+            <div class="card-body border border-primary-subtle">
+                <h3 class="card-title text-primary-emphasis">Lukas</h3>
+                <p class="card-text">Den største og stærkeste gorilla på hele teamet, kan angiveligt bænke 110kg 15x3
+                    gange. Det rygtes også at Lukas vandt en kamp mod 100 mænd før han joinede Gooner Games Inc</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <img src="/static/simon.png" class="card-img-top" alt="simon">
+            <div class="card-body border border-primary-subtle">
+                <h3 class="card-title text-primary-emphasis">Simon</h3>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card’s content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
+</div> {% endblock %}
