--- a/Flask/Hjemmeside/templates/home.html
+++ b/Flask/Hjemmeside/templates/home.html
@@ -16,8 +16,7 @@
         <h2 class="text-center bg-dark bg-opacity-50 p-2">
           Menneskelige fejl er primær
           årsag til databrud</h2>
-        <p class="text-center bg-dark bg-opacity-50 p-2">"I simulerede
-          phishing
+        <p class="text-center bg-dark bg-opacity-50 p-2">I simulerede phishing
           angreb udført af eksterne samarbejds virksomheder, er man kommer frem til at i
           gennemsnit falder 60% af virksomheders medarbejdere for phishing angreb</p>
       </div>
@@ -33,10 +32,12 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="static/training.png" class="d-block w-100" alt="training">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center h-100 text-center">
-        <h2 class="text-center bg-dark bg-opacity-50 p-2">Third slide label</h2>
-        <p class="text-center bg-dark bg-opacity-50 p-2">Some representative placeholder content for the third slide.
+        <h2 class="text-center bg-dark bg-opacity-50 p-2">Træning af medarbejdere virker</h2>
+        <p class="text-center bg-dark bg-opacity-50 p-2">Træning af medarbejdere i at genkende phishing angreb kan reducere
+          succesraten for phishing angreb med op til 80%. Det er en effektiv måde at beskytte
+          virksomheden mod databrud og tab af følsomme oplysninger</p>
         </p>
       </div>
     </div>
