--- a/Flask/Hjemmeside/templates/dashboard.html
+++ b/Flask/Hjemmeside/templates/dashboard.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
-{% block title %}Home{% endblock %}
+{% block title %}Dashboard{% endblock %}
 
 {% block content %}<h1>Dashboard</h1>{% endblock %}
