--- a/Flask/Hjemmeside/templates/home.html
+++ b/Flask/Hjemmeside/templates/home.html
@@ -2,6 +2,16 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+ {% with messages = get_flashed_messages() %}
+    {% if messages %}
+            {% for message in messages %}
+                {{ message }}
+            {% endfor %}
+            <div class="alert alert-danger" role="alert">
+         You are not authorized to view this page!
+        </div>
+    {% endif %}
+    {% endwith %}
 <div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
