--- a/Flask/Hjemmeside/templates/about_us.html
+++ b/Flask/Hjemmeside/templates/about_us.html
@@ -44,8 +44,8 @@
             <img src="/static/simon.png" class="card-img-top" alt="simon">
             <div class="card-body border border-primary-subtle">
                 <h3 class="card-title text-primary-emphasis">Simon</h3>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card’s content.</p>
+                <p class="card-text">Manden, myten, moustachen.
+                    Hans overskæg er så skarpt, at det kunne skære gennem kokosnødder, og hans frokoster? En eksplosion af smag, sol og stil, som at spise i paradis iført solbriller.</p>
                 <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
         </div>
